--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <head>
 <title>夜狼电子商务</title>
 <link rel="shortcut icon" href="//pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
-  <meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
+  <meta name="keywords" content="凯软,凯软电子商务,凯软团队,凯软电子商务团队">
   <meta name="description" content="开发各种电子商务软件以及运营">
   <link href="css/style.css" type="text/css" rel="stylesheet">
 <!--百度统计-->
@@ -23,10 +23,10 @@ var _hmt = _hmt || [];
 <body>
     <!--开始-->
     <div class="contnt">
-        <header class="meng">夜狼电子商务团队主页</header>
+        <header class="meng">凯软电子商务团队主页</header>
         <div class="messageDetails">
             <div class="storeup">
-                <p>夜狼团队旗下网站入口</p>
+                <p>凯软团队旗下网站入口</p>
             </div>
                     <div class="link">
             <span>关于作者</span>
