--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>1号影视-电影解析全民解析-vip视频在线解析-永久免费-电影解析</title>
 	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
-	<meta name="keywords" content="kaysarbiz,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析">
+	<meta name="keywords" content="kaysarsoft,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析">
 	<meta name="description" content="在线解析，vip视频解析，优酷vip解析，爱奇艺vip解析，腾讯vip解析，乐视vip解析，">
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<script src="js/jquery.min.js"></script>
