--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -39,7 +39,7 @@
 				<span style="color: #7F7F7F;">免费全网VIP视频vip会员免广告看电影！亲们如果觉得好用，请帮我们传播！ 若播放异常，刷新，更换接口尝试哦！
 				</span>
 			<div align="center">
-				<a href="https://kaysarbiz.gitee.io/waimai/"> <img
+				<a href="https://kaysarsoft.gitee.io/waimai/"> <img
 						src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png" width="300"></a>
 			</div>
 			<div class="language">
@@ -97,7 +97,7 @@
 							<br>
 
 							<div align="center">
-								<img src="https://kaysarbiz.gitee.io/img/paycode/123.png" width="300">
+								<img src="https://kaysarsoft.gitee.io/img/paycode/123.png" width="300">
 							</div>
 
 						</div>
