--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -37,7 +37,7 @@
 <body background="https://www.helloimg.com/images/2022/01/31/G8z2F1.png">
   
   <div class="col-xs-12 col-sm-10 col-md-8 col-lg-7 center-block" style="float: none;">
-  <h1 style="font-size: 18px; text-align: center;">تۈن بۆرىسى كىنو يىشىش سىستىمىسى</h1>
+  <h1 style="font-size: 18px; text-align: center;">قەيسەرسوفىت كىنو يىشىش سىستىمىسى</h1>
 <hr>
 
             <p style="letter-spacing: 1px; text-align: center;">
