--- a/vip/aitaobao/index.html
+++ b/vip/aitaobao/index.html
@@ -21,7 +21,7 @@
 		if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) {
 			window.location.href= 'https://ai.m.taobao.com/index.html?pid=mm_1225940134_1835850347_110640700311&union_lens=lensId%3APUB%401693214631%4021509a34_0b8d_18a3b74e81f_1533%4001';
 		} else {
-			window.location= 'PC端跳转页面URL';
+			window.location= 'https://ai.taobao.com?pid=mm_1225940134_1835850347_110640700311&union_lens=lensId%3APUB%401693268709%4021329e69_0b86_18a3eae0e8e_1498%4001';
 		}
 	};
  
