--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@ var _hmt = _hmt || [];
         </div>
         <div class="link">
             <span>外卖内部卷</span>
+            <a href="./vip/aitaobao">马上进入</a>
+        </div>
+        <div class="link">
+            <span>外卖内部卷</span>
             <a href="./waimai">马上进入</a>
         </div>   
         <div class="link">
