--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ var _hmt = _hmt || [];
             <a href="http:/ijhif.yhzu.cn/">马上进入</a>
         </div>
         <div class="link">
-            <span>外卖内部卷</span>
+            <span>爱淘宝</span>
             <a href="./vip/aitaobao">马上进入</a>
         </div>
         <div class="link">
