--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -89,7 +89,7 @@
 	
 	<p>قوللاپ قويۇڭ رەھمەت</p>
 	 <div >
-                     <img src="https://kaysarbiz.gitee.io/img/paycode/123.png"" width="300" >
+                     <img src="https://kaysarsoft.gitee.io/img/paycode/123.png"" width="300" >
      </div>
 		  
   </div>
