--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@ var _hmt = _hmt || [];
         </div>
         <div class="link">
             <span>爱淘宝</span>
-            <a href="./youhui/aitaobao">马上进入</a>
+            <a href="./youhui/aitaobao/">马上进入</a>
         </div>
         <div class="link">
             <span>饿了么内部券</span>
-            <a href="./waimai">马上进入</a>
+            <a href="./youhui/eleme/">马上进入</a>
         </div> 
          <div class="link">
             <span>美团内部券</span>
-            <a href="./waimai">马上进入</a>
+            <a href="./youhui/meituan/">马上进入</a>
         </div>     
         <!--<div class="link">
             <span>凯撒云盘</span>
