--- a/youhui/index.html
+++ b/youhui/index.html
@@ -1,8 +1,32 @@
-<!DOCTYPE html><html lang=zh-CN><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><title>加载中</title><link rel=icon href=https://img.jutuike.com/kuaizhan/dth5/v2.0.9/static/favicon.ico><script>var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS.supports('top: constant(a)'))
-            document.write('<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' + (coverSupport ? ', viewport-fit=cover' : '') + '" />')</script><link rel=stylesheet href=https://img.jutuike.com/kuaizhan/dth5/v2.0.9/static/index.5841170f.css></head><body><noscript><strong>Please enable JavaScript to continue.</strong></noscript><div id=app></div><script src=https://img.jutuike.com/kuaizhan/dth5/v2.0.9/static/js/chunk-vendors.793285ef.js></script><script src=https://img.jutuike.com/kuaizhan/dth5/v2.0.9/static/js/index.bccafab3.js></script></body><script>var userAgent = navigator.userAgent;
+<!DOCTYPE html>
+<html lang=zh-CN>
+
+<head>
+	<meta charset=utf-8>
+	<meta http-equiv=X-UA-Compatible content="IE=edge">
+	<title>加载中</title>
+	<link rel=icon href=https://img.jutuike.com/kuaizhan/dth5/v2.0.9/static/favicon.ico>
+	<script>
+		var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS.supports('top: constant(a)'))
+            document.write('<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' + (coverSupport ? ', viewport-fit=cover' : '') + '" />')
+	</script>
+	<link rel=stylesheet href=https://img.jutuike.com/kuaizhan/dth5/v2.0.9/static/index.5841170f.css>
+</head>
+
+<body>
+	<noscript><strong>Please enable JavaScript to continue.</strong></noscript>
+	<div id=app></div>
+	<script src=https://img.jutuike.com/kuaizhan/dth5/v2.0.9/static/js/chunk-vendors.793285ef.js></script>
+	<script src=https://img.jutuike.com/kuaizhan/dth5/v2.0.9/static/js/index.bccafab3.js></script>
+</body>
+<script>
+	var userAgent = navigator.userAgent;
 		  if (/miniProgram/i.test(userAgent) && /micromessenger/i.test(userAgent)) {
 	        document.write('<script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"><\/script>');
 	      } 
 		  if (!/miniProgram/i.test(userAgent) && !/micromessenger/i.test(userAgent)) {
 			document.write('<script type="text/javascript" src="https://ssl.captcha.qq.com/TCaptcha.js"><\/script>');
-		  }</script></html>
+		  }
+</script>
+
+</html>
