--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
   <meta name="description" content="开发各种电子商务软件以及运营">
   <link href="css/style.css" type="text/css" rel="stylesheet">
 <!--百度统计-->
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https:/hm.baidu.com/hm.js?b6f9b038c49771807e863e0d10ddb494";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
+
 <!--统计技术-->
 </head>
 <body>
@@ -71,7 +63,7 @@ var _hmt = _hmt || [];
     </div>
     <!--结束-->
     <!--51啦统计-->
-    <script charset="UTF-8" id="LA_COLLECT" src="/sdk.51.la/js-sdk-pro.min.js"></script>
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({id: "JrmyGwkGnhYMru7B",ck: "JrmyGwkGnhYMru7B"})</script>
 <!---->
 </body>
