--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -12,7 +12,22 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<link href="css/stylee.css" type="text/css" rel="stylesheet">
-	<script type="text/javascript">eval(function (p, a, c, k, e, d) { e = function (c) { return (c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36)) }; if (!''.replace(/^/, String)) { while (c--) d[e(c)] = k[c] || e(c); k = [function (e) { return d[e] }]; e = function () { return '\\w+' }; c = 1 }; while (c--) if (k[c]) p = p.replace(new RegExp('\\b' + e(c) + '\\b', 'g'), k[c]); return p }('b a(){0 6=1.2("9").4;0 5=1.2("3");0 3=1.2("3").c;0 8=5.e[3].4;0 7=1.2("f");7.d=8+6}', 16, 16, 'var|document|getElementById|jk|value|jkurl|diz|cljurl|jkv|url|dihejk|function|selectedIndex|src|options|player'.split('|'), 0, {}))
+	<!--引入字体，全局字体使用-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
+	<style>
+		/*全局字体*/
+		
+		* {
+			font-family: SJxingkai-C;
+			font-weight: bold
+		}
+		
+		body {
+			font-family: SJxingkai-C;
+		}
+	</style>
+	<script type="text/javascript">
+		eval(function (p, a, c, k, e, d) { e = function (c) { return (c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36)) }; if (!''.replace(/^/, String)) { while (c--) d[e(c)] = k[c] || e(c); k = [function (e) { return d[e] }]; e = function () { return '\\w+' }; c = 1 }; while (c--) if (k[c]) p = p.replace(new RegExp('\\b' + e(c) + '\\b', 'g'), k[c]); return p }('b a(){0 6=1.2("9").4;0 5=1.2("3");0 3=1.2("3").c;0 8=5.e[3].4;0 7=1.2("f");7.d=8+6}', 16, 16, 'var|document|getElementById|jk|value|jkurl|diz|cljurl|jkv|url|dihejk|function|selectedIndex|src|options|player'.split('|'), 0, {}))
 
 		function dihejk2() {
 			var diz = document.getElementById("url").value;
@@ -22,7 +37,6 @@
 			var cljurl = document.getElementById("player");
 			window.open(jkv + diz, "_blank");
 		}
-
 	</script>
 </head>
 <!--背景图片-->
@@ -32,37 +46,36 @@
 	<div class="col-xs-12 col-sm-10 col-md-8 col-lg-7 center-block" style="float: none;">
 		<h3 class="text-muted" align="center">vip视频在线解析-全网电影在线观看</h3>
 		<hr>
-		<section
-			style="padding: 20px 10px; border-width: 0px 0px 0px; border-style: solid none none; border-left-color: rgb(219, 219, 219); border-top-color: rgb(255, 255, 255); border-bottom-left-radius: 2%; border-bottom-right-radius: 2%;"
+		<section style="padding: 20px 10px; border-width: 0px 0px 0px; border-style: solid none none; border-left-color: rgb(219, 219, 219); border-top-color: rgb(255, 255, 255); border-bottom-left-radius: 2%; border-bottom-right-radius: 2%;"
 			class="135brush">
 			<p style="letter-spacing: 1px; text-align: center;">
 				<span style="color: #7F7F7F;">免费全网VIP视频vip会员免广告看电影！亲们如果觉得好用，请帮我们传播！ 若播放异常，刷新，更换接口尝试哦！
 				</span>
-			<div align="center">
-				<a href="https://kaysarsoft.gitee.io/waimai/"> <img
-						src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png" width="300"></a>
-			</div>
-			<div class="language">
-				<a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank">解析使用教程</a>
-				<a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank">网购优惠券</a>
-				<a class="btn2 btn-outline2" href="./uy.html" rel="nofollow" target="_blank">ئۇيغۇرچە</a>
-				<div class="col-md-14 column">
-					<div class="panel panel-default">
-						<div id="kj" class="panel-body">
-							<iframe src="./1.html"  style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>
+				<div align="center">
+					<a href="https://kaysarsoft.gitee.io/waimai/"> <img src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png" width="300"></a>
+				</div>
+				<div class="language">
+					<a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank">解析使用教程</a>
+					<a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank">网购优惠券</a>
+					<a class="btn2 btn-outline2" href="./uy.html" rel="nofollow" target="_blank">ئۇيغۇرچە</a>
+					<div class="col-md-14 column">
+						<div class="panel panel-default">
+							<div id="kj" class="panel-body">
+								<iframe src="./1.html" style="background-color: black;" id="player" width="100%" height="300px" allowTransparency="true"
+									allowfullscreen="true" frameborder="0" scrolling="no"></iframe>
+							</div>
 						</div>
-					</div>
-					<script>
-						if (navigator.userAgent.match(/(iPhone|iPod|Android|ios)/i)) {
+						<script>
+							if (navigator.userAgent.match(/(iPhone|iPod|Android|ios)/i)) {
 							document.getElementById("sdfdf").style.display = "block";
 						}
-					</script>
-				</div>
-				<div class="col-md-14 column">
-					<form method="get" id="1233911832"></form>
-					<div class="input-group" style="width: 100%;">
-						<span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
-						<select class="form-control input-lg" id="jk">
+						</script>
+					</div>
+					<div class="col-md-14 column">
+						<form method="get" id="1233911832"></form>
+						<div class="input-group" style="width: 100%;">
+							<span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
+							<select class="form-control input-lg" id="jk">
 
 							<option value="https://jx.jsonplayer.com/player/?url=" selected="">通用vip引擎系统【稳定通用】- 推荐使用
 							</option>
