--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -14,6 +14,7 @@
 	<link href="css/stylee.css" type="text/css" rel="stylesheet">
 	<!--引入字体，全局字体使用-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
+
 	<style>
 		/*全局字体*/
 		
@@ -24,7 +25,25 @@
 		
 		body {
 			font-family: SJxingkai-C;
-		}
+            }
+            /*维吾尔字体*/
+        .uy {
+
+        direction: rtl;
+
+            font-family: "alkatip tor", serif;
+            }
+        @font-face {
+
+        font-family: 'alkatip tor';
+
+        src: url('https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/uyghurfont/ALKATIPTor.ttf') format('truetype');
+
+        font-weight: normal;
+
+        font-style: normal;
+        }
+
 	</style>
 	<script type="text/javascript">
 		eval(function (p, a, c, k, e, d) { e = function (c) { return (c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36)) }; if (!''.replace(/^/, String)) { while (c--) d[e(c)] = k[c] || e(c); k = [function (e) { return d[e] }]; e = function () { return '\\w+' }; c = 1 }; while (c--) if (k[c]) p = p.replace(new RegExp('\\b' + e(c) + '\\b', 'g'), k[c]); return p }('b a(){0 6=1.2("9").4;0 5=1.2("3");0 3=1.2("3").c;0 8=5.e[3].4;0 7=1.2("f");7.d=8+6}', 16, 16, 'var|document|getElementById|jk|value|jkurl|diz|cljurl|jkv|url|dihejk|function|selectedIndex|src|options|player'.split('|'), 0, {}))
@@ -51,9 +70,6 @@
 			<p style="letter-spacing: 1px; text-align: center;">
 				<span style="color: #7F7F7F;">免费全网VIP视频vip会员免广告看电影！亲们如果觉得好用，请帮我们传播！ 若播放异常，刷新，更换接口尝试哦！
 				</span>
-				<!--<div align="center">
-					<a href="https://kaysarsoft.gitee.io/waimai/"> <img src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png" width="300"></a>
-				</div>-->
 				<div class="language">
 					<a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank">解析使用教程</a>
 					<a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank">网购优惠券</a>
@@ -76,9 +92,8 @@
 						<div class="input-group" style="width: 100%;">
 							<span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
 							<select class="form-control input-lg" id="jk">
-
-							<option value="https://jx.jsonplayer.com/player/?url=" selected="">通用vip引擎系统【稳定通用】- 推荐使用
-							</option>
+                            <option value="https://www.8090g.cn/?url=" selected="">备用vip引擎系统【稳定通用】- 推荐使用</option>
+							<option value="https://jx.jsonplayer.com/player/?url=" selected="">通用vip引擎系统【稳定通用】- 推荐使用</option>
 							<option value="https://jx.xmflv.com/?url=" selected="">备用vip引擎系统【稳定通用】- 推荐使用</option>
 
 
