--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -2,149 +2,160 @@
 <html lang="zh-cn">
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>1号影视-电影解析全民解析-vip视频在线解析-永久免费-电影解析</title>
-	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
-	<meta name="keywords" content="kaysarsoft,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析">
-	<meta name="description" content="在线解析，vip视频解析，优酷vip解析，爱奇艺vip解析，腾讯vip解析，乐视vip解析，">
-	<link href="css/bootstrap.min.css" rel="stylesheet" />
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<link href="css/stylee.css" type="text/css" rel="stylesheet">
-	<!--引入字体，全局字体使用-->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>1号影视-电影解析全民解析-vip视频在线解析-永久免费-电影解析</title>
+    <link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
+    <meta name="keywords"
+        content="kaysarsoft,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析">
+    <meta name="description" content="在线解析，vip视频解析，优酷vip解析，爱奇艺vip解析，腾讯vip解析，乐视vip解析，">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link href="css/stylee.css" type="text/css" rel="stylesheet">
+    <!--引入字体，全局字体使用-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
 
-	<style>
-		/*全局字体*/
-		
-		* {
-			font-family: SJxingkai-C;
-			font-weight: bold
-		}
-		
-		body {
-			font-family: SJxingkai-C;
-            }
-            /*维吾尔字体*/
-        .uy {
+    <style>
+        /*全局字体*/
 
-        direction: rtl;
-
-            font-family: "alkatip tor", serif;
-            }
-        @font-face {
-
-        font-family: 'alkatip tor';
-
-        src: url('https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/uyghurfont/ALKATIPTor.ttf') format('truetype');
-
-        font-weight: normal;
-
-        font-style: normal;
+        * {
+            font-family: SJxingkai-C;
+            font-weight: bold
         }
 
-	</style>
-	<script type="text/javascript">
-		eval(function (p, a, c, k, e, d) { e = function (c) { return (c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36)) }; if (!''.replace(/^/, String)) { while (c--) d[e(c)] = k[c] || e(c); k = [function (e) { return d[e] }]; e = function () { return '\\w+' }; c = 1 }; while (c--) if (k[c]) p = p.replace(new RegExp('\\b' + e(c) + '\\b', 'g'), k[c]); return p }('b a(){0 6=1.2("9").4;0 5=1.2("3");0 3=1.2("3").c;0 8=5.e[3].4;0 7=1.2("f");7.d=8+6}', 16, 16, 'var|document|getElementById|jk|value|jkurl|diz|cljurl|jkv|url|dihejk|function|selectedIndex|src|options|player'.split('|'), 0, {}))
+        body {
+            font-family: SJxingkai-C;
+        }
 
-		function dihejk2() {
-			var diz = document.getElementById("url").value;
-			var jkurl = document.getElementById("jk");
-			var jk = document.getElementById("jk").selectedIndex;
-			var jkv = jkurl.options[jk].value;
-			var cljurl = document.getElementById("player");
-			window.open(jkv + diz, "_blank");
-		}
-	</script>
+        /*维吾尔字体*/
+        .uy {
+
+            direction: rtl;
+
+            font-family: "alkatip tor", serif;
+        }
+
+        @font-face {
+
+            font-family: 'alkatip tor';
+
+            src: url('https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/uyghurfont/ALKATIPTor.ttf') format('truetype');
+
+            font-weight: normal;
+
+            font-style: normal;
+        }
+    </style>
+    <script type="text/javascript">
+        eval(function (p, a, c, k, e, d) { e = function (c) { return (c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36)) }; if (!''.replace(/^/, String)) { while (c--) d[e(c)] = k[c] || e(c); k = [function (e) { return d[e] }]; e = function () { return '\\w+' }; c = 1 }; while (c--) if (k[c]) p = p.replace(new RegExp('\\b' + e(c) + '\\b', 'g'), k[c]); return p }('b a(){0 6=1.2("9").4;0 5=1.2("3");0 3=1.2("3").c;0 8=5.e[3].4;0 7=1.2("f");7.d=8+6}', 16, 16, 'var|document|getElementById|jk|value|jkurl|diz|cljurl|jkv|url|dihejk|function|selectedIndex|src|options|player'.split('|'), 0, {}))
+
+        function dihejk2() {
+            var diz = document.getElementById("url").value;
+            var jkurl = document.getElementById("jk");
+            var jk = document.getElementById("jk").selectedIndex;
+            var jkv = jkurl.options[jk].value;
+            var cljurl = document.getElementById("player");
+            window.open(jkv + diz, "_blank");
+        }
+    </script>
 </head>
-<!--背景图片-->
+<body>
 
-<body background="https://www.helloimg.com/images/2022/01/31/G8z2F1.png">
-
-	<div class="col-xs-12 col-sm-10 col-md-8 col-lg-7 center-block" style="float: none;">
-		<h3 class="text-muted" align="center">vip视频在线解析-全网电影在线观看</h3>
-		<hr>
-		<section style="padding: 20px 10px; border-width: 0px 0px 0px; border-style: solid none none; border-left-color: rgb(219, 219, 219); border-top-color: rgb(255, 255, 255); border-bottom-left-radius: 2%; border-bottom-right-radius: 2%;"
-			class="135brush">
-			<p style="letter-spacing: 1px; text-align: center;">
-				<span style="color: #7F7F7F;">免费全网VIP视频vip会员免广告看电影！亲们如果觉得好用，请帮我们传播！ 若播放异常，刷新，更换接口尝试哦！
-				</span>
-				<div class="language">
-					<a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank">解析使用教程</a>
-					<a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank">网购优惠券</a>
-					<a class="btn2 btn-outline2" href="./uy.html" rel="nofollow" target="_blank">ئۇيغۇرچە</a>
-					<div class="col-md-14 column">
-						<div class="panel panel-default">
-							<div id="kj" class="panel-body">
-								<iframe src="./1.html" style="background-color: black;" id="player" width="100%" height="300px" allowTransparency="true"
-									allowfullscreen="true" frameborder="0" scrolling="no"></iframe>
-							</div>
-						</div>
-						<script>
-							if (navigator.userAgent.match(/(iPhone|iPod|Android|ios)/i)) {
-							document.getElementById("sdfdf").style.display = "block";
-						}
-						</script>
-					</div>
-					<div class="col-md-14 column">
-						<form method="get" id="1233911832"></form>
-						<div class="input-group" style="width: 100%;">
-							<span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
-							<select class="form-control input-lg" id="jk">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-lg-7 center-block" style="float: none;">
+        <h3 class="text-muted" align="center">vip视频在线解析-全网电影在线观看</h3>
+        <hr>
+        <section
+            style="padding: 20px 10px; border-width: 0px 0px 0px; border-style: solid none none; border-left-color: rgb(219, 219, 219); border-top-color: rgb(255, 255, 255); border-bottom-left-radius: 2%; border-bottom-right-radius: 2%;"
+            class="135brush">
+            <p style="letter-spacing: 1px; text-align: center;">
+                <span style="color: #7F7F7F;">免费全网VIP视频vip会员免广告看电影！亲们如果觉得好用，请帮我们传播！ 若播放异常，刷新，更换接口尝试哦！
+                </span>
+            <div class="language">
+                <a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank">解析使用教程</a>
+                <a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank">网购优惠券</a>
+                <a class="btn2 btn-outline2" href="./uy.html" rel="nofollow" target="_blank"><span
+                        class="uy">ئۇيغۇرچە</span></a>
+                <div class="col-md-14 column">
+                    <div class="panel panel-default">
+                        <div id="kj" class="panel-body">
+                            <iframe src="./1.html" style="background-color: black;" id="player" width="100%"
+                                height="300px" allowTransparency="true" allowfullscreen="true" frameborder="0"
+                                scrolling="no"></iframe>
+                        </div>
+                    </div>
+                    <script>
+                        if (navigator.userAgent.match(/(iPhone|iPod|Android|ios)/i)) {
+                            document.getElementById("sdfdf").style.display = "block";
+                        }
+                    </script>
+                </div>
+                <div class="col-md-14 column">
+                    <form method="get" id="1233911832"></form>
+                    <div class="input-group" style="width: 100%;">
+                        <span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
+                        <select class="form-control input-lg" id="jk">
                             <option value="https://www.8090g.cn/?url=" selected="">备用vip引擎系统【稳定通用】- 推荐使用</option>
-							<option value="https://jx.jsonplayer.com/player/?url=" selected="">通用vip引擎系统【稳定通用】- 推荐使用</option>
-							<option value="https://jx.xmflv.com/?url=" selected="">备用vip引擎系统【稳定通用】- 推荐使用</option>
+                            <option value="https://jx.jsonplayer.com/player/?url=" selected="">通用vip引擎系统【稳定通用】- 推荐使用
+                            </option>
+                            <option value="https://jx.xmflv.com/?url=" selected="">备用vip引擎系统【稳定通用】- 推荐使用</option>
 
 
 
-							<div class="input-group" style="width: 100%;">
-								<span class="input-group-addon input-lg" style="width: 80px;">播放地址</span>
-								<input class="form-control input-lg" type="search"
-									placeholder="电脑使用Ctrl+V粘贴网址-手机直接长按粘贴网址" id="url">
-							</div>
-							<br>
-							<div>
-								<button id="bf" type="button" class="btn btn-success btn-lg btn-block"
-									onClick="dihejk()">Go-点击开始解析</button>
-								<button id="bf" type="button" class="btn btn-success btn-lg btn-block"
-									onClick="dihejk2()">New-点击全屏解析</button>
-							</div>
-					</div>
-					<div class="unit-100">
-						<div class="language">
-							<a class="btn2 btn-outline2" href="https://www.le.com/" rel="nofollow" target="_blank">进入乐视视频</a>
-							<a class="btn2 btn-outline2" href="https://www.iqiyi.com/" rel="nofollow" target="_blank">进入奇艺视频</a>
-							<a class="btn2 btn-outline2" href="https://www.mgtv.com/" rel="nofollow" target="_blank">进入芒果视频</a>
-							<a class="btn2 btn-outline2" href="https://www.tudou.com/" rel="nofollow" target="_blank">进入土豆视频</a>
-							<br>
-							<a class="btn2 btn-outline2" href="https://v.qq.com/" rel="nofollow" target="_blank">进入腾讯视频</a>
-							<a class="btn2 btn-outline2" href="https://www.youku.com/" rel="nofollow" target="_blank">进入优酷视频</a>
-							<a class="btn2 btn-outline2" href="https://tv.sohu.com/" rel="nofollow" target="_blank">进入搜狐视频</a>
-							<a class="btn2 btn-outline2" href="https://www.pptv.com/" rel="nofollow" target="_blank">进入pptv视频</a>
-							<br>
+                            <div class="input-group" style="width: 100%;">
+                                <span class="input-group-addon input-lg" style="width: 80px;">播放地址</span>
+                                <input class="form-control input-lg" type="search"
+                                    placeholder="电脑使用Ctrl+V粘贴网址-手机直接长按粘贴网址" id="url">
+                            </div>
+                            <br>
+                            <div>
+                                <button id="bf" type="button" class="btn btn-success btn-lg btn-block"
+                                    onClick="dihejk()">Go-点击开始解析</button>
+                                <button id="bf" type="button" class="btn btn-success btn-lg btn-block"
+                                    onClick="dihejk2()">New-点击全屏解析</button>
+                            </div>
+                    </div>
+                    <div class="unit-100">
+                        <div class="language">
+                            <a class="btn2 btn-outline2" href="https://www.le.com/" rel="nofollow"
+                                target="_blank">进入乐视视频</a>
+                            <a class="btn2 btn-outline2" href="https://www.iqiyi.com/" rel="nofollow"
+                                target="_blank">进入奇艺视频</a>
+                            <a class="btn2 btn-outline2" href="https://www.mgtv.com/" rel="nofollow"
+                                target="_blank">进入芒果视频</a>
+                            <a class="btn2 btn-outline2" href="https://www.tudou.com/" rel="nofollow"
+                                target="_blank">进入土豆视频</a>
+                            <br>
+                            <a class="btn2 btn-outline2" href="https://v.qq.com/" rel="nofollow"
+                                target="_blank">进入腾讯视频</a>
+                            <a class="btn2 btn-outline2" href="https://www.youku.com/" rel="nofollow"
+                                target="_blank">进入优酷视频</a>
+                            <a class="btn2 btn-outline2" href="https://tv.sohu.com/" rel="nofollow"
+                                target="_blank">进入搜狐视频</a>
+                            <a class="btn2 btn-outline2" href="https://www.pptv.com/" rel="nofollow"
+                                target="_blank">进入pptv视频</a>
+                            <br>
 
-							<div align="center">
-								<img src="https://kaysarsoft.gitee.io/img/paycode/123.png" width="300">
-							</div>
+                            <div align="center">
+                                <img src="https://kaysarsoft.gitee.io/img/paycode/123.png" width="300">
+                            </div>
 
-						</div>
+                        </div>
 
-					</div>
-					<div id="coin" class="coin">
-						<script>var Coin = true;</script>
-					</div>
+                    </div>
+                    <div id="coin" class="coin">
+                        <script>var Coin = true;</script>
+                    </div>
 
-					<div class="panel-body" style="text-align: center;">
+                    <div class="panel-body" style="text-align: center;">
 
-						<div class="container-fluid">
-							</button>
-							<script type="text/javascript" src="js/19670051.js"></script>
-							&nbsp;&nbsp;&nbsp;Copyright © 1号影视-电影解析全民解析-vip视频在线解析-永久免费-电影解析
-						</div>
-						<p>本站不进行任何资源存储，只提供影视检索服务</p>
-					</div>
-				</div>
+                        <div class="container-fluid">
+                            </button>
+                            <script type="text/javascript" src="js/19670051.js"></script>
+                            &nbsp;&nbsp;&nbsp;Copyright © 1号影视-电影解析全民解析-vip视频在线解析-永久免费-电影解析
+                        </div>
+                        <p>本站不进行任何资源存储，只提供影视检索服务</p>
+                    </div>
+                </div>
 </body>
-
 </html>
