--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -1,26 +1,27 @@
-
 <html xmlns="http://www.w3.org/1999/xhtml" dir="rtl" lang="zh-ug">
- <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>كىنو يىشىش سىستىمىسى</title>
-  <link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
-    <!--维文文字alt-->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/uyghurfont/uyghurfont.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="./uyfont.css">
-    <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <!--黑白特效-->
-  
- <!--樱花特效-->
-  <script src="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/yinghua.js"></script>
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>كىنو يىشىش سىستىمىسى</title>
+	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
+	<!--维文文字alt-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/uyghurfont/uyghurfont.css">
+	<link href="css/bootstrap.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="./uyfont.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<!--黑白特效-->
+
+	<!--樱花特效-->
+	<script src="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/yinghua.js"></script>
 
 
 
 
-  <link href="css/stylee.css" type="text/css" rel="stylesheet">
-   <script type="text/javascript">eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('b a(){0 6=1.2("9").4;0 5=1.2("3");0 3=1.2("3").c;0 8=5.e[3].4;0 7=1.2("f");7.d=8+6}',16,16,'var|document|getElementById|jk|value|jkurl|diz|cljurl|jkv|url|dihejk|function|selectedIndex|src|options|player'.split('|'),0,{}))
+	<link href="css/stylee.css" type="text/css" rel="stylesheet">
+	<script type="text/javascript">
+		eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('b a(){0 6=1.2("9").4;0 5=1.2("3");0 3=1.2("3").c;0 8=5.e[3].4;0 7=1.2("f");7.d=8+6}',16,16,'var|document|getElementById|jk|value|jkurl|diz|cljurl|jkv|url|dihejk|function|selectedIndex|src|options|player'.split('|'),0,{}))
 
    function dihejk2() {
        var diz = document.getElementById("url").value;
@@ -30,42 +31,44 @@
        var cljurl = document.getElementById("player");
        window.open(jkv + diz,"_blank");
    }
+	</script>
+</head>
 
-   </script>
-   </head>
-   <!--背景图片-->
-<body background="https://www.helloimg.com/images/2022/01/31/G8z2F1.png">
-  
-  <div class="col-xs-12 col-sm-10 col-md-8 col-lg-7 center-block" style="float: none;">
-  <h1 style="font-size: 18px; text-align: center;">تۈن بۆرىسى كىنو يىشىش سىستىمىسى</h1>
-<hr>
+<body>
 
-            <p style="letter-spacing: 1px; text-align: center;">
-                <span style="color: #7F7F7F;">دۆلىتىمىزدىكى چوڭ كىنو سۇپىسىى بولغان تىڭشۇن ئەيچىييې يوۋكۇ قاتارلىق كىنولانى ھەقسىز قىلىدۇ
-</span> 
-    <!--<p align=center>
+	<div class="col-xs-12 col-sm-10 col-md-8 col-lg-7 center-block" style="float: none;">
+		<h1 style="font-size: 18px; text-align: center;">تۈن بۆرىسى كىنو يىشىش سىستىمىسى</h1>
+		<hr>
+
+		<p style="letter-spacing: 1px; text-align: center;">
+			<span style="color: #7F7F7F;">دۆلىتىمىزدىكى چوڭ كىنو سۇپىسىى بولغان تىڭشۇن ئەيچىييې يوۋكۇ قاتارلىق كىنولانى ھەقسىز قىلىدۇ
+</span>
+			<!--<p align=center>
         <a  href="https://kaysarbiz.gitee.io/waimai/" > <img src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png" width="300"></a>
     </p>-->
-    <p align=center>
-      <a class="btn2 btn-outline2 uy" href="./jiaocheng.html" rel="nofollow" target="_blank" >ئىشلىتىش قوللانمىسى</a>
-      <a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank" >تور سودىسى ئىتبار چەك</a>
-      </p>
-	<div class="col-md-14 column">
-    <div class="panel panel-default">
-     <div id="kj" class="panel-body" >
-     <iframe src="1.html"  style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>	 
-     </div>
-    </div>
-<script>
-    if(navigator.userAgent.match(/(iPhone|iPod|Android|ios)/i)){
+			<p align=center>
+				<a class="btn2 btn-outline2 uy" href="./jiaocheng.html" rel="nofollow" target="_blank">ئىشلىتىش قوللانمىسى</a>
+				<a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank">تور سودىسى ئىتبار چەك</a>
+			</p>
+			<div class="col-md-14 column">
+				<div class="panel panel-default">
+					<div id="kj" class="panel-body">
+						<iframe src="1.html" style="background-color: black;" id="player" width="100%" height="300px" allowTransparency="true" allowfullscreen="true"
+							frameborder="0" scrolling="no"></iframe>
+					</div>
+				</div>
+				<script>
+					if(navigator.userAgent.match(/(iPhone|iPod|Android|ios)/i)){
         document.getElementById("sdfdf").style.display = "block";
     }
-</script>
-   </div><div class="col-md-14 column">  
-    <form method="get" id="1233911832"></form>
-     <div class="input-group" style="width: 100%;">
-      <span class="input-group-addon input-lg" style="width: 80px; ">ئۇلاش ئىغىزى</span>
-      <select class="form-control input-lg" id="jk">
+
+				</script>
+			</div>
+			<div class="col-md-14 column">
+				<form method="get" id="1233911832"></form>
+				<div class="input-group" style="width: 100%;">
+					<span class="input-group-addon input-lg" style="width: 80px; ">ئۇلاش ئىغىزى</span>
+					<select class="form-control input-lg" id="jk">
 
 	  <option value="https://jx.jsonplayer.com/player/?url=" selected="">ئورتاق ئىشلىتىلىندىغان ئىغىز</option>
 	  <option value="https://jx.xmflv.com/?url=" selected="">قوشۇمچە يىشىش ئىغىزى</option>
