--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -14,7 +14,7 @@
     <script src="js/bootstrap.min.js"></script>
     <link href="css/stylee.css" type="text/css" rel="stylesheet">
     <!--引入字体，全局字体使用-->
-    <link rel="stylesheet" href="https://cdn1.kaysar.top/font/sanjihangkaiti/result.css" />
+    <link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
 
     <style>
         /*全局字体*/
@@ -40,7 +40,7 @@
 
             font-family: 'alkatip tor';
 
-            src: url('https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/uyghurfont/ALKATIPTor.ttf') format('truetype');
+            src: url('https://jsd.nn.ci/gh/kaysarbiz/texiao@main/uyghurfont/ALKATIPBasmaTom.ttf') format('truetype');
 
             font-weight: normal;
 
