--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -134,9 +134,9 @@
                                 target="_blank">进入pptv视频</a>
                             <br>
 
-                            <div align="center">
+                            <!--<div align="center">
                                 <img src="https://kaysarsoft.gitee.io/img/paycode/123.png" width="300">
-                            </div>
+                            </div>-->
 
                         </div>
 
