--- a/vip/v/1.html
+++ b/vip/v/1.html
@@ -7,7 +7,7 @@
 <title>1号解析</title>
 <style>
 body {
-    margin: 0;font-family: "Microsoft YaHei"; font-size:11pt;color:#c4c4c2;background: url(https://www.helloimg.com/images/2023/04/26/oqBB9S.jpg);background-repeat: /no-repeat;background-size: cover;background-color:#1f1f1f;
+    margin: 0;font-family: "Microsoft YaHei"; font-size:11pt;color:#c4c4c2;background: url(https://vip.helloimg.com/images/2023/04/26/oqBB9S.jpg);background-repeat: /no-repeat;background-size: cover;background-color:#1f1f1f;
 }
 .dazi{font-size:22px;letter-spacing:0px;}
 .dianji{padding-top:10px;text-align:center;margin-top:68px;letter-spacing:2px;}
