--- a/vip/v/1.html
+++ b/vip/v/1.html
@@ -1,30 +1,83 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>1号解析</title>
-<style>
-body {
-    margin: 0;font-family: "SJxingkai-C"; font-size:11pt;color:#c4c4c2;background: url(https://vip.helloimg.com/images/2023/04/26/oqBB9S.jpg);background-repeat: /no-repeat;background-size: cover;background-color:#1f1f1f;
-}
-.dazi{font-size:22px;letter-spacing:0px;}
-.dianji{padding-top:10px;text-align:center;margin-top:68px;letter-spacing:2px;}
-.huang{color:#ffba00;}
-.gao {padding-top:30px;}
-.anniu{cursor: pointer;display:inline-block;width:200px;height:35px;background:#e08901;border-radius:4px;color:#ffffff;line-height:35px;letter-spacing:2px;text-align:center;font-size:12pt;padding:3px;TEXT-DECORATION: none;}
-.anniu:hover{cursor: pointer;background:#667b00;TEXT-DECORATION: none;}
-.anniu:active{cursor: pointer;background:#ffba00;TEXT-DECORATION: none;}
-</style>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>1号解析</title>
+    <!--全局字体-->
+    <link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/font/sanjihangkaiti/result.css" />
+	<style>
+		body {
+			margin: 0;
+			font-family: "SJxingkai-C";
+			font-size: 11pt;
+			color: #c4c4c2;
+			background: url(https://vip.helloimg.com/images/2023/04/26/oqBB9S.jpg);
+			background-repeat: /no-repeat;
+			background-size: cover;
+			background-color: #1f1f1f;
+		}
+		
+		.dazi {
+			font-size: 22px;
+			letter-spacing: 0px;
+		}
+		
+		.dianji {
+			padding-top: 10px;
+			text-align: center;
+			margin-top: 68px;
+			letter-spacing: 2px;
+		}
+		
+		.huang {
+			color: #ffba00;
+		}
+		
+		.gao {
+			padding-top: 30px;
+		}
+		
+		.anniu {
+			cursor: pointer;
+			display: inline-block;
+			width: 200px;
+			height: 35px;
+			background: #e08901;
+			border-radius: 4px;
+			color: #ffffff;
+			line-height: 35px;
+			letter-spacing: 2px;
+			text-align: center;
+			font-size: 12pt;
+			padding: 3px;
+			TEXT-DECORATION: none;
+		}
+		
+		.anniu:hover {
+			cursor: pointer;
+			background: #667b00;
+			TEXT-DECORATION: none;
+		}
+		
+		.anniu:active {
+			cursor: pointer;
+			background: #ffba00;
+			TEXT-DECORATION: none;
+		}
+	</style>
 </head>
+
 <body>
-<!-- Section Header -->
-<div class="dianji">
-  <p class="dazi">请输入视频网址</p>
-  <p>支持爱奇艺、腾讯、优酷等vip视频解析</p>
-  <p>如播放失败请切换解析线路</p>
-  <p>by:凯撒</p>
-</div>
+	<!-- Section Header -->
+	<div class="dianji">
+		<p class="dazi">请输入视频网址</p>
+		<p>支持爱奇艺、腾讯、优酷等vip视频解析</p>
+		<p>如播放失败请切换解析线路</p>
+		<p>by:凯撒</p>
+	</div>
 </body>
+
 </html>
