--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/uyghurfont/font/result.css">
     <style>
             * {
-            font-family: SJxingkai-C;
+            font-family: ALKATIP Tor;
             font-weight: bold
         }
 
         body {
-            font-family: SJxingkai-C;
+            font-family: ALKATIP Tor;
         }
     </style>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
