--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -1,4 +1,4 @@
-<<head>
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>كىنو يىشىش سىستىمىسى</title>
     <link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
