--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -82,17 +82,13 @@
                     <br>
 
                     <p>قوللاپ قويۇڭ رەھمەت</p>
-                    <div>
+                    <!--<div>
                         <img src="https://kaysarsoft.gitee.io/img/paycode/123.png"" width=" 300">
-                    </div>
+                    </div>-->
 
                 </div>
 
             </div>
-            <div id="coin" class="coin">
-                <script>var Coin = true;</script>
-            </div>
-
             <div class="panel-body" style="text-align: center;">
                 <p> Copyright © تۈن بۆرىسى ئەتىرتىگە تەۋە </p>
 
