--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -5,12 +5,11 @@
     <!--维文文字alt-->
     <link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/uyghurfont/font/result.css">
     <style>
-            * {
+           {
             font-family: ALKATIP Tor;
-            font-weight: bold
         }
 
-        body {
+        *,body {
             font-family: ALKATIP Tor;
         }
     </style>
