--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,7 @@
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">./tianqi.sh</span>
                     <br />
-                    <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tb&skin=pitaya" frameborder="0"
+                    <iframe scrolling="no" src="https://i.tianqi.com/?c=code&id=34" frameborder="0"
                         width="350" height="24" allowtransparency="true"></iframe>
                     <br />
                     <span style="color: rgb(0, 190, 0);">root@nutssss</span>
