--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>关于作者</title>
-    <meta name="description" content="">
+    <meta name="description" content="凯赛尔">
     <meta name="keywords" content="凯赛尔">
     <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
     <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
@@ -25,10 +25,10 @@
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
-                <p>一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
+                <p>一匹夜狼<img src="https://pic.imgdb.cn/item/616662672ab3f51d91317a64.png" alt="狼" style="width: 20px; vertical-align: middle;"></p>
                 <p>爱好计算机</p>
                 <p>瞎折腾浪费时间最在行</p>
-                <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>
+                <!--<p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>-->
             </div>
             <!-- 两个按钮 -->
             <!-- <div class="meBox-Button">
@@ -111,8 +111,7 @@
 
     <!-- 页脚 -->
     <div id="footer">
-        <!-- <p>© 2020 NUTSSSS | <a href="http://beian.miit.gov.cn">湘ICP备18015792号</a></p>
-        <p>THEME MADE BY <a href="https://nutssss.cn/">Nutssss</a></p> -->
+         <p>©© 2019-<script>document.write(new Date().getFullYear())</script>夜狼<a href="https://icp.gov.moe/?keyword=20240167" target="_blank">萌ICP备20240167号</a></p>
     </div>
 </body>
 
