--- a/about/index.html
+++ b/about/index.html
@@ -111,7 +111,7 @@
 
     <!-- 页脚 -->
     <div id="footer">
-         <p>©© 2019-<script>document.write(new Date().getFullYear())</script>夜狼<a href="https://icp.gov.moe/?keyword=20240167" target="_blank">萌ICP备20240167号</a></p>
+         <p>© 2019-<script>document.write(new Date().getFullYear())</script>夜狼  <a href="https://icp.gov.moe/?keyword=20240167" target="_blank">萌ICP备20240167号</a></p>
     </div>
 </body>
 
