--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         </div>
         <footer>
-        <p>© 2019-<script>document.write(new Date().getFullYear())</script>夜狼团队</p>
+        <p>© 2019-<script>document.write(new Date().getFullYear())</script>夜狼团队   <a href="https://icp.gov.moe/?keyword=20240167" target="_blank">萌ICP备20240167号</a></p>
     </footer>
     </div>
     <!--结束-->
