--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -81,9 +81,9 @@
                     <br>
 
                     <p>قوللاپ قويۇڭ رەھمەت</p>
-                    <!--<div>
-                        <img src="https://kaysarsoft.gitee.io/img/paycode/123.png"" width=" 300">
-                    </div>-->
+                    <div>
+                        <img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png"" width=" 300">
+                    </div>
 
                 </div>
 
