--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>1号影视-电影解析全民解析-vip视频在线解析-永久免费-电影解析</title>
+      <meta name="keywords" content="1号影视,电影解析全民解析,vip视频在线解析,永久免费,电影解析">
+  <meta name="description" content="解析电影">
     <link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
     <meta name="keywords"
         content="kaysarsoft,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析">
@@ -134,10 +136,9 @@
                                 target="_blank">进入pptv视频</a>
                             <br>
 
-                            <!--<div align="center">
-                                <img src="https://kaysarsoft.gitee.io/img/paycode/123.png" width="300">
-                            </div>-->
-
+                    <div>
+                        <img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png"" width=" 300">
+                    </div>
                         </div>
 
                     </div>
