--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -5,12 +5,9 @@
     <!--维文文字alt-->
     <link rel="stylesheet" href="https://jsd.nn.ci/gh/kaysarbiz/texiao@main/uyghurfont/font/result.css">
     <style>
-           {
-            font-family: ALKATIP Tor;
-        }
-
         *,body {
             font-family: ALKATIP Tor;
+            direction: rtl;      /*从右往左*/
         }
     </style>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
