--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -12,6 +12,18 @@
     </style>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/stylee.css" type="text/css" rel="stylesheet">
+        <script type="text/javascript">
+        eval(function (p, a, c, k, e, d) { e = function (c) { return (c < a ? "" : e(parseInt(c / a))) + ((c = c % a) > 35 ? String.fromCharCode(c + 29) : c.toString(36)) }; if (!''.replace(/^/, String)) { while (c--) d[e(c)] = k[c] || e(c); k = [function (e) { return d[e] }]; e = function () { return '\\w+' }; c = 1 }; while (c--) if (k[c]) p = p.replace(new RegExp('\\b' + e(c) + '\\b', 'g'), k[c]); return p }('b a(){0 6=1.2("9").4;0 5=1.2("3");0 3=1.2("3").c;0 8=5.e[3].4;0 7=1.2("f");7.d=8+6}', 16, 16, 'var|document|getElementById|jk|value|jkurl|diz|cljurl|jkv|url|dihejk|function|selectedIndex|src|options|player'.split('|'), 0, {}))
+
+        function dihejk2() {
+            var diz = document.getElementById("url").value;
+            var jkurl = document.getElementById("jk");
+            var jk = document.getElementById("jk").selectedIndex;
+            var jkv = jkurl.options[jk].value;
+            var cljurl = document.getElementById("player");
+            window.open(jkv + diz, "_blank");
+        }
+    </script>
 </head>
 
 <body>
@@ -20,7 +32,7 @@
         <h1 style="font-size: 18px; text-align: center;">تۈن بۆرىسى كىنو يىشىش سىستىمىسى</h1>
         <hr>
 
-        <p style="letter-spacing: 1px; text-align: center;">
+        <p style=" text-align: center;">
             <span style="color: #7F7F7F;">دۆلىتىمىزدىكى چوڭ كىنو سۇپىسىى بولغان تىڭشۇن ئەيچىييې يوۋكۇ قاتارلىق كىنولانى
                 ھەقسىز قىلىدۇ
             </span>
